--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -2,7 +2,6 @@
   <ng-template #start >
     <div class="flex items-center gap-2">
       
-      <i *ngIf="!isMobile" class="pi pi-align-left" style="font-size: 2rem; color: rgb(138, 0, 180); margin: 9px; cursor: pointer;" (click)="toggleSidebar()"></i>
       <p-button label="Pixelyze" icon="pi pi-home" class="press-start-2p-regular custom-button" severity="secondary" plain [routerLink]="['/main']"/>
       <p-button class="custom-button" label="Galeria" icon="pi pi-images" severity="secondary" [routerLink]="['/main/gallery']" />
   
@@ -17,85 +16,29 @@
 
   <ng-template #end>
     <div class="flex items-center gap-2" *ngIf="!isMobile">
-      <app-toggle-theme *ngIf="!isMobile"></app-toggle-theme>
-      <p-button label="Empieza a dibujar" severity="success" size="small" [routerLink]="['/draw']" />
-      <p-button label="Empieza a dibujar test" severity="warn" size="small" [routerLink]="['/drawTest']" />
+      <p-button label="Empieza a dibujar" class="mt-2 mr-3" severity="success" size="small" [routerLink]="['/drawTest']" />
 
       <ng-container *ngIf="!isToken">
-        <p-button label="Iniciar sesión" icon="pi pi-user" severity="info" size="small" [routerLink]="['/login']" />
+        <p-button label="Iniciar sesión" icon="pi pi-user" severity="info" size="small"  />
       </ng-container>
 
       <ng-container *ngIf="isToken">
-        <p-avatar (click)="cerrarSesion()" image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" [style]="{ width: '32px', height: '32px' }" />
+        <p-avatar
+          image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
+          [style]="{ width: '50px', height: '50px', cursor: 'pointer' }"
+          (click)="op.toggle($event)"
+        ></p-avatar>
+
+        <p-overlayPanel #op [dismissable]="true">
+          <div class="flex flex-column">
+            <button type="button" label="Ver perfil" (click)="verPerfil()" class="p-button-info mb-2 p-1 p-radius">Ver perfil</button>
+            <button type="button" label="Cerrar sesión" (click)="cerrarSesion()" class=" p-button-danger p-1 p-radius">Cerrar sesión</button>
+          </div>
+        </p-overlayPanel>
       </ng-container>
+
     </div>
   </ng-template>
 </p-toolbar>
 
-<p-sidebar [(visible)]="sidebarVisible" [baseZIndex]="10000">
-  <div class="sidebar-content">
-
-    
-    <p-card   
-      [style]="{ overflow: 'hidden', cursor: 'pointer' }"
-      styleClass="text-center hover-card"
-      *ngIf="!isToken" 
-      [routerLink]="['/login']"
-    >
-
-      <ng-template pTemplate="header">
-        <p-avatar
-          image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
-          class="mb-2 mt-5"
-          [style]="{ width: '40%', height: '40%' }"
-        />
-      </ng-template>
-    
-      <ng-template pTemplate="title">
-        <div class="text-center">
-          Inicia sesión / Crea una cuenta
-        </div>
-      </ng-template>
-    
-      <ng-template pTemplate="subtitle">
-        <div class="text-center">
-          Ingresa a nuestra comunidad y comparte con miles de usuarios
-        </div>
-      </ng-template>
-
-    </p-card>
-    
-    <p-card   
-      [style]="{ overflow: 'hidden', cursor: 'pointer' }"
-      styleClass="text-center hover-card"
-      *ngIf="isToken" 
-      (click)="cerrarSesion()"
-    >
-      
-      <ng-template pTemplate="header" >
-        <p-avatar (click)="cerrarSesion()" image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" class="mb-2" [style]="{ width: '40%', height: '40%' }" />
-      </ng-template>
-    
-      <ng-template pTemplate="title">
-        <div class="text-center">
-          Bienvenido
-        </div>
-      </ng-template>
-
-    </p-card>
-
-    <p-tree [value]="files" styleClass="w-full md:w-[30rem]" />
-
-    <p-button label="Pixelyze" icon="pi pi-home" text plain class="w-full" [routerLink]="['/main']"></p-button>
-
-    <ng-container>
-      <p-button label="Pixelyze" icon="pi pi-home" text plain [routerLink]="['/main']"></p-button>
-    </ng-container>
-
-    <ng-container>
-      <p-button label="Galería" icon="pi pi-images" text plain class="w-full" [routerLink]="['/main/gallery']"></p-button>
-    </ng-container>
-
-  </div>
-</p-sidebar>
 
