--- a/frontend/src/app/main/components/login/login.component.css
+++ b/frontend/src/app/main/components/login/login.component.css
@@ -11,6 +11,11 @@ body {
   height: 100vh;
   background-size: cover;
 }
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
 .container-form {
   display: flex;
   border-radius: 20px;
