--- a/frontend/src/app/main/components/login/login.component.html
+++ b/frontend/src/app/main/components/login/login.component.html
@@ -13,6 +13,8 @@
 </head>
 <body>
 
+<p-avatar icon="pi pi-home" class="mr-2 cursor-pointer" size="xlarge" shape="circle" [routerLink]="['/main']" />
+
 <div class="container-form login hide">
   <div class="information">
     <div class="info-childs">
