--- a/frontend/src/app/main/components/register/register.component.css
+++ b/frontend/src/app/main/components/register/register.component.css
@@ -12,6 +12,11 @@ body {
 
   background-size: cover;
 }
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
 .container-form {
   display: flex;
   border-radius: 20px;
