--- a/frontend/src/app/main/components/register/register.component.html
+++ b/frontend/src/app/main/components/register/register.component.html
@@ -12,6 +12,9 @@
   <title>PixelArt - Login</title>
 </head>
 <body>
+
+<p-avatar icon="pi pi-home" class="mr-2 cursor-pointer" size="xlarge" shape="circle" [routerLink]="['/main']" />
+
 <div class="container-form register">
   <div class="information">
     <div class="info-childs">
